# pyopencode

./: AGENTS.md  README.md  README_CN.md  pyopencode.phase2.example.json  pyopencode.phase3.example.json  pyopencode.yaml  pyproject.toml  safety_refusal_testset.json  user_prompt.md
commands/: bugfix.md
docs/: ARCHITECTURE_CN.md  CODE_WALKTHROUGH_CN.md
scripts/: launch_pyopencode.py  selftest_tools.py
src/pyopencode/: __main__.py  app_context.py  main.py  runner.py
src/pyopencode/agents/: models.py  registry.py
src/pyopencode/commands/: __init__.py  loader.py  models.py
src/pyopencode/compaction/: builder.py  policy.py  summarizer.py
src/pyopencode/config/: loader.py  models.py
src/pyopencode/events/: __init__.py  store.py
src/pyopencode/llm/: factory.py  openai_compat.py
src/pyopencode/mcp/: __init__.py  bridge.py  client.py  example_server.py  models.py
src/pyopencode/rules/: __init__.py  resolver.py
src/pyopencode/session/: models.py  store.py
src/pyopencode/tools/: base.py  builtin.py  permissions.py  registry.py
src/pyopencode/tools/builtin_tools/: bash_tool.py  file_edit.py  file_multiedit.py  file_read.py  file_write.py  glob_tool.py  grep_tool.py  listdir.py  lsp_tool.py  patch_tool.py  question_tool.py  skill_tool.py  todo_tools.py  webfetch_tool.py
src/pyopencode/util/: fs.py  ordinal_suffix.py  subprocess.py
test/: todo.py
test/docs/: step1_设计.md
