[project]
name = "pyopencode"
version = "0.1.0"
description = "Local modular coding agent inspired by anomalyco/opencode (Phase 0 + Phase 1)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "platformdirs>=4.2.0",
  "PyYAML>=6.0",
  "jedi>=0.19.1"
]

[project.scripts]
pyopencode = "pyopencode.main:app"

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"
